Admin module:: Testing Ongoing.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;400;500;600&display=swap");
 
 /* @font-face {
     font-family: "Outfit";
@@ -29,61 +29,57 @@
     src: local("Outfit"),
     url(~static/Outfit-SemiBold.ttf) format("truetype");
   } */
-  
-  @layer utilities {
-      @variants responsive {
-        /* Hide scrollbar for Chrome, Safari and Opera */
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-  
-        /* Hide scrollbar for IE, Edge and Firefox */
-        .no-scrollbar {
-            -ms-overflow-style: none;  /* IE and Edge */
-            scrollbar-width: none;  /* Firefox */
-        }
-      }
-    }
-  /* html {
+
+/* html {
     font-family: 'Outfit', sans-serif;
   } */
 
-  body{
-    background: #f4f7ff;
-  }
-  
-  * {
-    font-family: 'Outfit', sans-serif;
-  }
-  ::-webkit-scrollbar {
-    width: 5px;
-    height: 2px;
-    background-color: #aaa;
+body {
+  background: #f4f7ff;
+}
+
+* {
+  font-family: "Outfit", sans-serif;
+}
+::-webkit-scrollbar {
+  width: 5px;
+  height: 2px;
+  background-color: #aaa;
 }
 ::-webkit-scrollbar-thumb {
-    background-color: #231F1E;
-    border-radius: 10px;
+  background-color: #231f1e;
+  border-radius: 10px;
 }
 
 .v-toast__item .v-toast__text {
-    padding: .3em 1em !important;
+  padding: 0.3em 1em !important;
 }
 
 .v-toast__text {
-    margin: 0;
-    padding: 0.3em 1em;
-    word-break: break-word;
+  margin: 0;
+  padding: 0.3em 1em;
+  word-break: break-word;
 }
 .v-toast__item {
-    opacity: 1;
-    min-height: 2.6em !important;
+  opacity: 1;
+  min-height: 2.6em !important;
 }
 
 .v-toast__item .v-toast__icon {
-    display: block;
-    width: 18px !important;
-    min-width: 18px !important;
-    height: 18px !important;
-    margin-left: 1em;
-    background: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 45.999 45.999'%3e %3cpath fill='%23fff' d='M39.264 6.736c-8.982-8.981-23.545-8.982-32.528 0-8.982 8.982-8.981 23.545 0 32.528 8.982 8.98 23.545 8.981 32.528 0 8.981-8.983 8.98-23.545 0-32.528zM25.999 33a3 3 0 11-6 0V21a3 3 0 116 0v12zm-3.053-17.128c-1.728 0-2.88-1.224-2.844-2.735-.036-1.584 1.116-2.771 2.879-2.771 1.764 0 2.88 1.188 2.917 2.771-.001 1.511-1.152 2.735-2.952 2.735z'/%3e %3c/svg%3e) no-repeat;
+  display: block;
+  width: 18px !important;
+  min-width: 18px !important;
+  height: 18px !important;
+  margin-left: 1em;
+}
+.p-tabview-selected{
+  color:#15cf74
+}
+
+.p-tabview-title{
+  color: #15cf74;
+}
+
+.p-tabview-nav-content{
+  border-bottom: 1px solid #15cf74;
 }
