--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,3 +83,11 @@ body {
 .p-tabview-nav-content{
   border-bottom: 1px solid #15cf74;
 }
+.p-fileupload, .p-button{
+  width: 100%;
+  height: 3rem;
+}
+
+.p-tabview-panels{
+  padding-inline: 0;
+}
